Non Training and expenditure entities added